# ciqual-mcp

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: publish.yml  tests.yml
src/: __init__.py  data_loader.py  database.py  server.py
src/ciqual_mcp/: data_loader.py  database.py  server.py
tests/: test_functional.py  test_server.py
